--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,20 +13,22 @@
     "@dev0000007/medium-web": "^1.0.10",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^7.1.2",
+    "@mui/material": "^7.2.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.10.0",
     "lucide-react": "^0.523.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
-    "react-slate": "^0.5.1",
+    "react-slate": "^0.1.0",
     "react-toastify": "^11.0.5",
     "slate": "^0.117.0",
     "slate-dom": "^0.116.0",
     "slate-history": "^0.113.1",
     "slate-react": "^0.117.1",
-    "tailwind": "^4.0.0",
+    "tailwind": "^2.3.1",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
