--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "@prisma/extension-accelerate": "^2.0.1",
     "@prisma/extension-optimize": "^2.0.0",
     "@prisma/instrumentation": "^6.10.0",
+    "cookie-es": "^2.0.0",
     "hono": "^4.7.11"
   },
   "devDependencies": {
