--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
+    "react-rnd": "^10.5.2",
     "react-router-dom": "^7.6.2",
     "react-slate": "^0.1.0",
     "react-toastify": "^11.0.5",
