--- a/backend/package.json
+++ b/backend/package.json
@@ -6,13 +6,16 @@
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.844.0",
+    "@aws-sdk/s3-request-presigner": "^3.844.0",
     "@dev0000007/medium-web": "^1.0.12",
     "@prisma/client": "^6.10.0",
     "@prisma/extension-accelerate": "^2.0.1",
     "@prisma/extension-optimize": "^2.0.0",
     "@prisma/instrumentation": "^6.10.0",
     "cookie-es": "^2.0.0",
-    "hono": "^4.7.11"
+    "hono": "^4.7.11",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "prisma": "^6.10.0",
