--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,10 +18,12 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.10.0",
+    "emoji-picker-react": "^4.13.2",
     "lucide-react": "^0.523.0",
     "react": "^19.1.0",
     "react-aws-s3": "^1.5.0",
     "react-dom": "^19.1.0",
+    "react-player": "^3.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
     "react-slate": "^0.1.0",
