--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.10.0",
     "emoji-picker-react": "^4.13.2",
     "lucide-react": "^0.523.0",
+    "motion": "^12.23.9",
     "react": "^19.1.0",
     "react-aws-s3": "^1.5.0",
     "react-dom": "^19.1.0",
